# web-app-template

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
.sqlx/: query-0ef6026640cb601021383f813c48cfde74aa188e86562de7113d2c2cba08c272.json  query-0f2f6cc33316a9a551862321c592a34696a186453f898c8eb4cfc353ac564404.json  query-10d169e9f4864f85d4ef9ba4736052b268cf3ccdb426e12078725f723aad2b99.json  query-123978e5a2acb18ed2e79e06986354ab8a7c6426cb0fec573b4c16ed65e70030.json  query-12cfbfbc76dfa221a18b393966808ac1031088a3b6d433f98bbe5bb4c0fe646d.json  query-139a878988a55c79b72b558279f6e42c2dfd8d1c9f52b32863cd3c5f04cc64b1.json  query-19d8328470ee73e8a3f2c47fd7f536c2c0e08618264392bf9981df0c44738a4e.json  query-1c0b2ca862e936bbbbd64564d64d7ca2bbec0807034b2c0a55c30b800773e2f9.json  query-24943a3451cff0ac7ae70340fa7af54d42f1d9e414d7392e94ed5bba0bfac50e.json  query-3a178554e3bb47346960309c550b3a3fc810aed927e704b37ee8cd52e64c103b.json  query-424216e60a68522968884cff6de0b1d392951857dfd6cb7db5b8325e8387a441.json  query-4562dd1aa7a681f1417771c3d2560dda3c5405a27040984b5f1bd3a0968dd0ae.json  query-4c934dd93c705d78ba21b7807fb160681257587e0a367beafc676705d8457033.json  query-4fde2e7b5a6a75224a2dbaafb8156f652f2e37da42f4eadab5bf0c8f398dc263.json  query-50f31b04d77c5d03fd9a4607c650ef100320917b7f46c00b795fc3e5cabb898b.json  query-54558df537f6b850af132e75e6d01a311b411a899239a6a146f9bf589c51c064.json  query-6bea03bab8c2d93a4317bf147c553ee02aa39503d3e7d466d6eba15ebe189865.json  query-6ebf455cff0a1da11f0d48276c54bdd8b9c3b668941fb4ac7401291c2809e114.json  query-73c23a70aa89524463324c12afa2ff8857821c5203efa11a2e0a5238a4fca64d.json  query-82b7fe5491614669f931b0febdbc42a30688d0abe7e040f1838f5fd7dbadd7f9.json  query-82e999094dfa480dd7641d72dba717c614dadf8c681e0a19f2f94a26b83195a4.json  query-831c2515caaa89422806b53a9cf6c7423bdcbd64f11145fcb847bb09d4d5eacf.json  query-854adb08f4c1bceff341ff6955abec7acaf5976574ac3241ddedf995f966ed68.json  query-87259074f3694532f4b3fe43f10792492ba73fe27bda39d2b4c9d40e1c7d5247.json  query-8aeb87a27b0caee530c75b2505e2dd54f02ef260a805a8bfd1dd99fa50585386.json  query-9260284e21ebcf934d310f9c569c76b3a076acd74dfc01e817cb7e7154bce179.json  query-972a9044d7fc4d533925848ffedd81d1016fdeedb6cdf9d74d129fb41998fd00.json  query-97fc0934a465ffaa9347e3f1725734e3b431a313e5a19fbdfcd299cd40ca499d.json  query-9d1b56a5c4a69f272c30aa51897174e32a9056c4b89c1a11beac79d349bbd291.json  query-a44d46eb6f8fd7b7632a7d03adeee17a9361f0f91327061d1fe1535be5f40031.json  query-a9155a0610c5ea736f0fa40f030296fcb97ba76412f4e9985837084151637b87.json  query-a95704e113fee9f6657addb81a293a562bc9f18006d98fa6be46d76be3f8982d.json  query-ac9ed7f4be57fbf1d5ec01cd3b69cd7c37ad27d868f22db9ee7f06c4d5313069.json  query-aeb703a2a9d009d96f5d9e5da02b5d9cd32b4f95f4ae04c020dc2715389845dc.json  query-b2d5b340882cda7e69d7ccbd6805398496b08708e93bc4b74c54a5bf4661327d.json  query-b5975c97c72b637eb68a1718867280cbd73d0b6ef312daefd768ac585c04802c.json  query-b666c7f934e8ee1fd4c6b04dd6d515376719013bd8d63d80998e1e2a3d56ad6d.json  query-caed1a85937564bd56a22c5f3e82e36e02fe26a6b1200725f97b85bc340c0a0a.json  query-d20f3a1c90ef89723dadd9aeab9882cf8725ab73d7150f9b2aad3c7f2afcf36e.json  query-d21408006984e76c2738b46de8915c34dc477f80c9b23d5e17e51a9c2534c324.json  (+6 more)
migrations/: 20230823181414_initial_database_structure.sql
migrations/postgres/: 20230823181414_initial_database_structure.sql
scripts/: build_and_deploy.sh
src/: http_server.rs  lib.rs  main.rs  util.rs
src/app/: config.rs  error.rs  hostname.rs  mod.rs  session_creation_key.rs  session_key.rs  session_verification_key.rs  state.rs  upload_store.rs  version.rs
src/app/secrets/: mod.rs
src/auth/: authentication_error.rs  login.rs  logout.rs  mod.rs  oauth_callback.rs  oauth_client.rs  provider_config.rs
src/background_jobs/: background_job_id.rs  mod.rs  queue_config.rs  worker.rs  worker_pool.rs
src/background_jobs/impls/: mod.rs  test_job.rs  tick_task.rs
src/background_jobs/stores/: basic_task_store.rs  event_task_store.rs  mod.rs  sqlite_store.rs
src/database/: database.rs  mod.rs  postgres.rs  sqlite.rs
src/database/custom_types/: api_key_id.rs  attempt.rs  background_job_state.rs  background_run_id.rs  background_run_state.rs  db_bool.rs  did.rs  fingerprint.rs  job_run_result.rs  login_provider.rs  login_provider_config.rs  mod.rs  oauth_provider_account_id.rs  provider_id.rs  session_id.rs  unique_task_key.rs  user_id.rs
src/database/models/: api_key.rs  background_job.rs  background_run.rs  mod.rs  oauth_provider_account.rs  oauth_state.rs  session.rs  user.rs
src/event_bus/: mod.rs
src/extractors/: api_key_identity.rs  client_ip.rs  database.rs  db_transaction.rs  mod.rs  requestor.rs  scheduler.rs  secrets.rs  server_base.rs  session_identity.rs
src/health_check/: credits.rs  data_source.rs  liveness.rs  liveness_check.rs  mod.rs  readiness.rs  version.rs
src/http_server/: error_handlers.rs  mod.rs
src/http_server/middleware/: api_key_identity.rs  jwt_key.rs  mod.rs
src/jobs/: catch_panic_future.rs  job_id.rs  job_run_id.rs  mod.rs  queue_config.rs  worker.rs  worker_pool.rs
src/jobs/impls/: mod.rs  test_job.rs
src/jobs/stores/: mod.rs
src/llm/: hugging_face.rs  mod.rs
src/llm/models/: mod.rs
src/middleware/: api_key_identity.rs
src/pages/: mod.rs
src/tasks/: mod.rs
src/tests/: mod.rs
src/tests/helpers/: database.rs  mod.rs  test_client.rs
src/utils/: mod.rs
styles/: app.css
templates/: home.html  layout.html  login.html  not_found.html  sidebar.html  topbar.html
