[package]
name = "web-app-template"
version = "0.1.0"
edition = "2021"

[dependencies]
pico-args = "^0.5"

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
uuid = { version = "^1.3", features = ["fast-rng", "serde", "v4"] }

futures = "^0.3"
tokio = { version = "^1", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }

axum = { version = "^0.6", features = ["headers", "http2", "multipart", "tracing"] }
http = "^0.2"
hyper = "^0.14"
tower = { version = "^0.4", features = ["timeout", "load-shed", "limit", "util"] }
tower-http = { version = "^0.4", features = ["auth", "cors", "limit", "fs", "propagate-header", "request-id", "sensitive-headers", "set-header", "util", "trace", "validate-request"] }
tracing = { version = "^0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-appender = "^0.2"
tracing-futures = { version = "^0.2", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "^0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "local-time", "time", "tracing"] }

jwt-simple = "0.11.6"
thiserror = "^1"

[dev-dependencies]
bytes = "^1.4"
proptest = "^1.1"
reqwest = { version = "^0.11", default-features = false, features = ["json", "multipart", "stream"] }
