[package]
name = "web-app-template"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
dotenvy = "^0.15"
futures = "^0.3"
itertools = "^0.11"
pico-args = "^0.5"
thiserror = "^1"
tokio = { version = "^1", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }

jwt-simple = "^0.11"
regex = { version = "^1", default-features = false, features = ["std"] }
sha2 = "^0.10"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
uuid = { version = "^1", features = ["fast-rng", "serde", "v4"] }

axum = { version = "^0.6", features = ["headers", "http2", "multipart", "tracing"] }
http = "^0.2"
hyper = "^0.14"
lettre = { version = "^0.10", features = ["tokio1-rustls-tls", "base64", "pool", "smtp-transport", "tracing", "email-encoding", "hostname", "mime", "builder", "dkim"], default-features = false }
oauth2 = "^4"
sqlx = { version = "^0.7", default-features = false, features = ["macros", "migrate", "runtime-tokio", "sqlite", "tls-rustls"] }
tower = { version = "^0.4", features = ["timeout", "load-shed", "limit", "util"] }
tower-http = { version = "^0.4", features = ["auth", "cors", "limit", "fs", "propagate-header", "request-id", "sensitive-headers", "set-header", "util", "trace", "validate-request"] }
url = "^2"

tracing = { version = "^0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-appender = "^0.2"
tracing-futures = { version = "^0.2", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "^0.3", default-features = false, features = ["env-filter", "fmt", "local-time", "time", "tracing"] }
axum-extra = { version = "0.8.0", features = ["cookie", "form"] }

[dev-dependencies]
bytes = "^1.4"
lettre = { version = "^0.10", features = ["file-transport"], default-features = false }
reqwest = { version = "^0.11", default-features = false, features = ["json", "multipart", "stream"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "web-app-template"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
