[package]
name = "web-app-template"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.70"

[dependencies]
async-trait = "^0.1"
dotenvy = "^0.15"
futures = "^0.3"
itertools = "^0.12"
pico-args = "^0.5"
thiserror = "^1"
tokio = { version = "^1", features = [
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }

base64 = "^0.22"
bincode = "^1.3"
ecdsa = { version = "^0.16", features = ["signing", "verifying"] }
hex = "^0.4"
hmac-sha512 = "^1"
jwt-simple = "^0.12"
p384 = "^0.13"
phf = { version = "^0.11", features = ["phf_macros", "macros"] }
rand = "^0.8"
regex = { version = "^1", default-features = false, features = ["std"] }
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
sha2 = "^0.10"
time = { version = "^0.3", features = ["formatting", "parsing", "serde"] }
uuid = { version = "^1", features = ["fast-rng", "serde", "v4"] }

askama = { version = "^0.12", features = ["with-axum", "mime"] }
askama_axum = "^0.4"
axum = { version = "^0.7", features = [
  "http2",
  "macros",
  "multipart",
  "tracing",
  "ws",
] }
axum-extra = { version = "^0.9", features = ["cookie", "form", "typed-header"] }
headers = "^0.4"
http = "^1"
hyper = "^1"
lettre = { version = "^0.11", features = [
  "tokio1-rustls-tls",
  "pool",
  "smtp-transport",
  "tracing",
  "hostname",
  "builder",
  "dkim",
], default-features = false }
oauth2 = "^4"
object_store = "^0.9"
reqwest = { version = "^0.11", default-features = false, features = ["json"] }
sqlx = { version = "^0.7", default-features = false, features = [
  "macros",
  "migrate",
  "runtime-tokio",
  "sqlite",
  "tls-rustls",
  "time",
] }
tower-http = { version = "^0.5", features = [
  "auth",
  "cors",
  "limit",
  "fs",
  "propagate-header",
  "request-id",
  "sensitive-headers",
  "set-header",
  "util",
  "trace",
  "validate-request",
] }
tower = { version = "^0.4", features = [
  "timeout",
  "load-shed",
  "limit",
  "util",
] }
url = "^2"

tracing = { version = "^0.1", features = [
  "max_level_debug",
  "release_max_level_info",
] }
tracing-appender = "^0.2"
tracing-futures = { version = "^0.2", default-features = false, features = [
  "std-future",
] }
tracing-subscriber = { version = "^0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "local-time",
  "time",
  "tracing",
] }

# ML Core
candle-core = { git = "https://github.com/huggingface/candle.git", version = "^0.4" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "^0.4" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "^0.4" }
llm-samplers = "^0.0"

# Accelerators
cudarc = { version = "^0.10", features = ["f16"], optional = true }
half = { version = "^2", features = [
  "num-traits",
  "use-intrinsics",
  "rand_distr",
], optional = true }

[dev-dependencies]
bytes = "^1.4"
lettre = { version = "^0.11", features = [
  "file-transport",
], default-features = false }
reqwest = { version = "^0.11", default-features = false, features = [
  "json",
  "multipart",
] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "web-app-template"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["cuda", "cudann", "nccl"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudann = ["candle-core/cudnn"]
nccl = ["cuda", "cudarc/nccl", "dep:half"]

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
